NF-194 - Warning users before timing them out

--- a/conf/application.conf
+++ b/conf/application.conf
@@ -155,3 +155,8 @@ upscan {
   approved-file-extensions = ".jpeg,.jpg,.png,.pdf,.doc,.docx,.xls,.xlsx,.ppt,.pptx"
   approved-file-types = "image/jpeg,image/png,application/pdf,application/msword,application/vnd.openxmlformats-officedocument.wordprocessingml.document,application/vnd.ms-excel,application/vnd.openxmlformats-officedocument.spreadsheetml.sheet,application/vnd.ms-powerpoint,application/vnd.openxmlformats-officedocument.presentationml.presentation"
 }
+
+timeoutDialog {
+  timeoutSeconds = 900
+  countdownSeconds = 120
+}
