--- a/conf/application.conf
+++ b/conf/application.conf
@@ -138,7 +138,6 @@ features.welsh-language-support = false
 
 mongodb {
   uri                 = "mongodb://localhost:27017/"${appName}
-  timeToLiveInSeconds = 960
 }
 
 urls {
@@ -156,7 +155,5 @@ upscan {
   approved-file-types = "image/jpeg,image/png,application/pdf,application/msword,application/vnd.openxmlformats-officedocument.wordprocessingml.document,application/vnd.ms-excel,application/vnd.openxmlformats-officedocument.spreadsheetml.sheet,application/vnd.ms-powerpoint,application/vnd.openxmlformats-officedocument.presentationml.presentation"
 }
 
-timeoutDialog {
-  timeoutSeconds = 900
-  countdownSeconds = 120
-}
+timeoutDialog.countdownSeconds = 120
+
