--- a/conf/application.conf
+++ b/conf/application.conf
@@ -144,6 +144,7 @@ urls {
   login         = "http://localhost:9949/auth-login-stub/gg-sign-in"
   loginContinue = "http://localhost:8490/national-import-duty-adjustment-centre"
   signout = "http://localhost:9949/auth-login-stub/session/logout"
+  bankAccountValidate = "http://localhost:9871/v2/validateBankDetails"
 }
 
 
