NF-233 - make it easier to use NIDAC stub for validateBankDetails

--- a/conf/application.conf
+++ b/conf/application.conf
@@ -93,6 +93,7 @@ microservice {
       protocol = http
       host = localhost
       port = 9871
+      validateBankDetails = "/v2/validateBankDetails"
     }
   }
 }
