--- a/conf/application.conf
+++ b/conf/application.conf
@@ -92,8 +92,8 @@ microservice {
     bank-account-reputation {
       protocol = http
       host = localhost
-      port = 9871
-      validateBankDetails = "/v2/validateBankDetails"
+      port = 8492
+      validateBankDetails = "/bars-stub/v2/validateBankDetails"
     }
   }
 }
