--- a/conf/application.conf
+++ b/conf/application.conf
@@ -93,7 +93,7 @@ microservice {
       protocol = http
       host = localhost
       port = 8492
-      sortcodeMetadata = "/bars-stub/metadata/"
+      sortcodeMetadata = "/bars-stub/metadata"
       businessAssess = "/bars-stub/business/v2/assess"
     }
   }
