--- a/conf/application.conf
+++ b/conf/application.conf
@@ -50,6 +50,8 @@ play.modules.enabled += "uk.gov.hmrc.play.bootstrap.AuthModule"
 play.modules.enabled += "play.modules.reactivemongo.ReactiveMongoHmrcModule"
 play.modules.enabled += "uk.gov.hmrc.nationalimportdutyadjustmentcentrefrontend.config.Module"
 
+play.modules.enabled += "uk.gov.hmrc.mongo.play.PlayMongoModule"
+
 # Secret key
 # ~~~~~
 # The secret key is used to secure cryptographics functions.
