SPIKE - force 'replaceIndexes' for initial deployment

--- a/conf/application.conf
+++ b/conf/application.conf
@@ -145,6 +145,7 @@ features.welsh-language-support = false
 
 mongodb {
   uri                 = "mongodb://localhost:27017/"${appName}
+  replaceIndexes = true
 }
 
 urls {
