NF-381 - Exit survey (feedback) enabled

--- a/conf/application.conf
+++ b/conf/application.conf
@@ -155,7 +155,7 @@ mongodb {
 urls {
   login         = "http://localhost:9949/auth-login-stub/gg-sign-in"
   loginContinue = "http://localhost:8490/apply-for-return-import-duty-paid-on-deposit-or-guarantee"
-  signout = "http://localhost:9949/auth-login-stub/session/logout"
+  feedback = "http://localhost:9514/feedback/national-import-duty-adjustment-centre"
   external {
     getEori = "https://www.gov.uk/eori"
   }
@@ -177,8 +177,8 @@ eori {
       "HMRC-CTS-ORG"
     ],
     allowList {
-      enabled = false
-      eoris = []
+      enabled = true
+      eoris = ["GB123456789000"]
     }
 }
 
