--- a/conf/application.conf
+++ b/conf/application.conf
@@ -177,8 +177,8 @@ eori {
       "HMRC-CTS-ORG"
     ],
     allowList {
-      enabled = true
-      eoris = ["GB123456789000"]
+      enabled = false
+      eoris = []
     }
 }
 
