NF-144 - add serviceId to application.conf

--- a/conf/application.conf
+++ b/conf/application.conf
@@ -165,6 +165,7 @@ urls {
   }
 }
 
+contact-frontend.serviceId = "national-import-duty-adjustment-centre"
 
 upscan {
   callback-base = "http://localhost:8490"
