NF-369 Make service name explicitly frontend, to avoid confusion

--- a/conf/application.conf
+++ b/conf/application.conf
@@ -95,7 +95,7 @@ microservice {
       port = 8492
       businessAssess = "/bars-stub/business/v2/assess"
     }
-    address-lookup {
+    address-lookup-frontend {
       protocol = http
       host = localhost
       port = 9028
