SPIKE - remove auto refresh and progress bar for file upload

--- a/conf/application.conf
+++ b/conf/application.conf
@@ -180,6 +180,11 @@ upscan {
   approved-file-types = "image/jpeg,image/png,application/pdf,application/msword,application/vnd.openxmlformats-officedocument.wordprocessingml.document,application/vnd.ms-excel,application/vnd.openxmlformats-officedocument.spreadsheetml.sheet,application/vnd.ms-powerpoint,application/vnd.openxmlformats-officedocument.presentationml.presentation,application/vnd.oasis.opendocument.text,application/vnd.oasis.opendocument.spreadsheet,application/vnd.oasis.opendocument.presentation"
 }
 
+upload {
+  timeout = 15 seconds
+  pollDelay = 500 milliseconds
+}
+
 timeoutDialog.countdownSeconds = 120
 
 eori {
