--- a/conf/application.conf
+++ b/conf/application.conf
@@ -120,7 +120,7 @@ metrics {
 
 auditing {
   enabled = false
-  traceRequests = true
+  traceRequests = false
   consumer {
     baseUri {
       host = localhost
