works for http status or by interrogating json body

--- a/conf/application.conf
+++ b/conf/application.conf
@@ -120,7 +120,7 @@ metrics {
 
 auditing {
   enabled = false
-  traceRequests = false
+  traceRequests = true
   consumer {
     baseUri {
       host = localhost
